Implemented fetching students and displaying them base on state

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -32,7 +32,7 @@
     "zoom":"هل في امكانك استخدام تطبيق المحادثات \"Zoom\"؟ حيث أن اللقاءات تتم من خلاله."
   },
   "students": {
-    "pending": "الطلاب الجدد",
+    "pending": "الطلاب المستجدون",
     "existing": "الطلاب القائمون",
     "archived": "اﻷرشيف"
   },
