--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,9 @@
     "join_initiative": "join the initiative",
     "sign_out": "sign out",
     "yes": "yes",
-    "no": "no"
+    "no": "no",
+    "date_created": "date created",
+    "course": "course"
   },
   "nav": {
     "home": "home",
@@ -14,6 +16,7 @@
     "courses": "courses"
   },
   "personal_info": {
+    "full_name": "full name",
     "first_name": "name",
     "middle_name": "parental",
     "last_name": "surname",
@@ -23,21 +26,33 @@
     "male": "male",
     "female": "female",
     "date_of_birth": "date of birth",
+    "age": "age",
     "email": "email",
     "country": "country",
     "governorate": "governorate",
+    "location": "location",
     "education": "education level",
+    "does_work": "do you work?",
     "occupation": "job",
+    "no_work_reason": "are you a ...",
+    "student" : "housewife",
+    "housewife" : "housewife",
+    "retired" : "retired",
+    "unemployed" : "unemployed",
+    "other": "other",
+    "explanation": "details",
     "experience": "have you memorized portions of the quran before?",
     "zoom": "are you able to use the conferencing app \"Zoom\"? as the sessions take place through it."
   },
   "students": {
     "pending": "pending students",
-    "existing": "existing students",
-    "archived": "archive"
+    "active": "existing students",
+    "archived": "archive",
+    "counter_one": "1 student selected",
+    "counter_other": "{{count}} students selected"
   },
   "teachers": {
-    "existing": "teachers",
+    "active": "teachers",
     "archived": "archive"
   },
   "description": {
