Updated customer fields

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -28,6 +28,7 @@
     "date_of_birth": "تاريخ الميلاد",
     "age": "العمر",
     "email": "البريد الالكتروني",
+    "facebook_link": "رابط الفاسبوك",
     "country": "الدولة",
     "governorate": "المحافظة",
     "location": "محل الإقامة",
