Added and styled missing fields to student form

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -32,9 +32,11 @@
     "age": "العمر",
     "email": "البريد الالكتروني",
     "facebook_link": "رابط الفاسبوك",
+    "nationality": "الجنسية",
+    "time_zone": "المنطة الزمنية",
     "country": "الدولة",
     "governorate": "المحافظة",
-    "location": "محل الإقامة",
+    "residence": "محل الإقامة",
     "education": "المؤهل",
     "does_work": "هل تعمل؟",
     "occupation": "العمل",
