--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,9 +32,11 @@
     "age": "age",
     "email": "email",
     "facebook_link": "facebook link",
+    "nationality": "nationality",
+    "time_zone": "tine zone",
     "country": "country",
     "governorate": "governorate",
-    "location": "location",
+    "residence": "residence",
     "education": "education level",
     "does_work": "do you work?",
     "occupation": "job",
