Updated form components

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,6 +24,7 @@
     "phone_number": "phone number",
     "second_phone_number": "another phone number",
     "WhatsApp": "WhatsApp",
+    "Telegram": "Telegram",
     "call": "available for calling",
     "gender": "gender",
     "male": "male",
