--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -24,6 +24,7 @@
     "phone_number": "رقم الهاتف",
     "second_phone_number": "رقم هاتف آخر",
     "WhatsApp": "WhatsApp",
+    "Telegram": "Telegram",
     "call": "متاح للاتصال",
     "gender": "النوع",
     "male": "ذكر",
