Updated student model fields

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -23,8 +23,8 @@
     "country_code": "كود الدولة",
     "phone_number": "رقم الهاتف",
     "second_phone_number": "رقم هاتف آخر",
-    "WhatsApp": "WhatsApp",
-    "Telegram": "Telegram",
+    "whatsapp": "WhatsApp",
+    "telegram": "Telegram",
     "call": "متاح للاتصال",
     "gender": "النوع",
     "male": "ذكر",
