--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,8 +23,8 @@
     "country_code": "country code",
     "phone_number": "phone number",
     "second_phone_number": "another phone number",
-    "WhatsApp": "WhatsApp",
-    "Telegram": "Telegram",
+    "whatsapp": "WhatsApp",
+    "telegram": "Telegram",
     "call": "available for calling",
     "gender": "gender",
     "male": "male",
