--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,13 +1,15 @@
 {
   "dir": "ltr",
-  "elements": {
-    "google_sign_in": "enter with google",
-    "join_initiative": "join the initiative",
-    "sign_out": "sign out",
+  "globals": {
+    "google_signIn": "enter with google",
+    "joinInitiative": "join the initiative",
+    "signOut": "sign out",
     "yes": "yes",
     "no": "no",
-    "date_created": "date created",
-    "course": "course"
+    "dateCreated": "date created",
+    "dateUpdated": "last updated",
+    "course": "course",
+    "loadMore": "load more"
   },
   "nav": {
     "home": "home",
@@ -15,52 +17,54 @@
     "teachers": "teachers",
     "courses": "courses"
   },
-  "personal_info": {
-    "full_name": "full name",
-    "first_name": "name",
-    "middle_name": "parental",
-    "last_name": "surname",
-    "country_code": "country code",
-    "phone_number": "phone number",
-    "second_phone_number": "another phone number",
+  "personalInfo": {
+    "fullName": "full name",
+    "firstName": "name",
+    "middleName": "parental",
+    "lastName": "surname",
+    "countryCode": "country code",
+    "phoneNumber": "phone number",
+    "secondPhoneNumber": "another phone number",
     "whatsapp": "WhatsApp",
     "telegram": "Telegram",
     "call": "available for calling",
     "gender": "gender",
     "male": "male",
     "female": "female",
-    "date_of_birth": "date of birth",
+    "dateOfBirth": "date of birth",
     "age": "age",
     "email": "email",
-    "facebook_link": "facebook link",
+    "facebookLink": "facebook link",
     "nationality": "nationality",
-    "time_zone": "tine zone",
+    "timeZone": "tine zone",
     "country": "country",
     "governorate": "governorate",
     "residence": "residence",
     "education": "education level",
-    "does_work": "do you work?",
+    "doesWork": "do you work?",
     "occupation": "job",
-    "no_work_reason": "are you a ...",
+    "noWorkReason": "are you a ...",
     "student": "housewife",
     "housewife": "housewife",
     "retired": "retired",
     "unemployed": "unemployed",
     "other": "other",
-    "explanation": "details",
-    "experience": "have you memorized portions of the quran before?",
+    "noDetails": "details",
+    "quran": "have you memorized portions of the quran before?",
     "zoom": "are you able to use the conferencing app \"Zoom\"? as the sessions take place through it."
   },
-  "students": {
-    "pending": "pending students",
-    "active": "existing students",
-    "archived": "archive",
-    "counter_one": "1 student selected",
-    "counter_other": "{{count}} students selected"
-  },
-  "teachers": {
-    "active": "teachers",
-    "archived": "archive"
+  "pages": {
+    "students": {
+      "pending": "pending students",
+      "active": "existing students",
+      "archived": "archive",
+      "counter_one": "1 student selected",
+      "counter_other": "{{count}} students selected"
+    },
+    "teachers": {
+      "active": "teachers",
+      "archived": "archive"
+    }
   },
   "governorate": {
     "egypt": {
@@ -92,17 +96,5 @@
       "SouthSinai": "South Sinai",
       "Suez": "Suez"
     }
-  },
-  "description": {
-    "part1": "Edit <1>src/App.js</1> and save to reload.",
-    "part2": "Learn React"
-  },
-  "counter_one": "Changed language just once",
-  "counter_other": "Changed language already {{count}} times",
-  "footer": {
-    "date": "Today is {{date, DATE_HUGE}}",
-    "date_morning": "Good morning! Today is {{date, DATE_HUGE}} | Have a nice day!",
-    "date_afternoon": "Good afternoon! It's {{date, DATE_HUGE}}",
-    "date_evening": "Good evening! Today was the {{date, DATE_HUGE}}"
   }
 }
