Implemented student state selection

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -9,7 +9,13 @@
     "dateCreated": "تاريخ الانشاء",
     "dateUpdated": "آخر تعديل",
     "course": "الدورة",
-    "loadMore": "حمل المزيد"
+    "loadMore": "حمل المزيد",
+    "unknown": "مجهول",
+    "pending": "منتظر",
+    "active": "مستمر",
+    "postponed": "مأجل",
+    "finished": "منتهي",
+    "canceled": "ملغي"
   },
   "nav": {
     "home": "الرئيسية",
@@ -51,7 +57,9 @@
     "other": "غير ذلك",
     "noDetails": "التفاصيل",
     "quran": "هل سبق لك حفظ شئ من القرآن ؟",
-    "zoom": "هل في امكانك استخدام تطبيق المحادثات \"Zoom\"؟ حيث أن اللقاءات تتم من خلاله."
+    "zoom": "هل في امكانك استخدام تطبيق المحادثات \"Zoom\"؟ حيث أن اللقاءات تتم من خلاله.",
+    "status": "الحالة",
+    "subscription": "الاشتراك"
   },
   "pages": {
     "students": {
