Added notes section for students

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -9,6 +9,12 @@
     "dateCreated": "تاريخ الانشاء",
     "dateUpdated": "آخر تعديل",
     "course": "الدورة",
+    "teacher": "المعلم",
+    "schedule": "المواعيد",
+    "notes": "ملاحظات",
+    "newNote": "ملحوظة جديدة",
+    "writeNoteHere": "اكتب ملحوظتك هنا",
+    "save": "حفظ",
     "loadMore": "حمل المزيد",
     "unknown": "مجهول",
     "pending": "انتظار",
