--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,6 +9,12 @@
     "dateCreated": "date created",
     "dateUpdated": "last updated",
     "course": "course",
+    "teacher": "teacher",
+    "schedule": "schedule",
+    "notes": "notes",
+    "newNote": "new note",
+    "writeNoteHere": "write your note here",
+    "save": "save",
     "loadMore": "load more",
     "unknown": "unknown",
     "pending": "pending",
