--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -24,7 +24,9 @@
     "canceled": "توقف",
     "fullPay": "تكلفة كاملة",
     "partialPay": "تكلفة جزئية",
-    "noPay": "بدون تكلفة"
+    "noPay": "بدون تكلفة",
+    "day": "اليوم",
+    "time": "الوقت"
   },
   "nav": {
     "home": "الرئيسية",
