Made updates and added some stuff

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -117,5 +117,10 @@
       "SouthSinai": "جنوب سيناء",
       "Suez": "السويس"
     }
+  },
+  "messages": {
+    "noFullName": "من فضلك ادخل اسمك الثلاثي",
+    "noPhoneNumber": "من فضلك ادخل رقم الهاتف",
+    "fieldRequired": "هذا الحقل مطلوب"
   }
 }
