Fixed spelling mistake in arabic translation

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -49,7 +49,7 @@
     "dateOfBirth": "تاريخ الميلاد",
     "age": "العمر",
     "email": "البريد الالكتروني",
-    "facebookLink": "رابط الفاسبوك",
+    "facebookLink": "رابط الفيسبوك",
     "nationality": "الجنسية",
     "timeZone": "المنطة الزمنية",
     "country": "الدولة",
