--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,6 +28,35 @@
     "submit": "submit",
     "reset": "reset"
   },
+  "dateTime": {
+    "day": "day",
+    "month": "month",
+    "year": "year",
+    "week": "week",
+    "symbols": {
+      "day": "dd",
+      "month": "mm",
+      "year": "yyyy"
+    },
+    "weekDays": {
+      "Monday": "Monday",
+      "Tuesday": "Tuesday",
+      "Wednesday": "Wednesday",
+      "Thursday": "Thursday",
+      "Friday": "Friday",
+      "Saturday": "Saturday",
+      "Sunday": "Sunday",
+      "short": {
+        "Monday": "Mon",
+        "Tuesday": "Tue",
+        "Wednesday": "Wed",
+        "Thursday": "Thu",
+        "Friday": "Fri",
+        "Saturday": "Sat",
+        "Sunday": "Sun"
+      }
+    }
+  },
   "nav": {
     "home": "home",
     "students": "students",
