Added new button and card components and made updates

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -169,7 +169,7 @@
     "noGender": "من فضلك اختر النوع",
     "noWorkStatus": "من فضلك ادخل الحالة الوظيفية",
     "noAnswer": "من فضلك اجب عن هذا السؤال",
-    "noPhoneNumberTags": "من فضلك اختر طريقة التواصل",
+    "noContactMethod": "من فضلك اختر طريقة التواصل",
     "fieldRequired": "هذا الحقل مطلوب"
   }
 }
