Implemented student search

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -29,7 +29,8 @@
     "clearForm": "حذف البيانات",
     "whatsapp": "واتسأب",
     "telegram": "تيليجرام",
-    "call": "اتصال"
+    "call": "اتصال",
+    "search": "بحث"
   },
   "dateTime": {
     "day": "يوم",
