--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -29,7 +29,8 @@
     "clearForm": "clear form",
     "whatsapp": "WhatsApp",
     "telegram": "Telegram",
-    "call": "Call"
+    "call": "Call",
+    "search": "search"
   },
   "dateTime": {
     "day": "day",
